// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render + wrap non Flex children 1`] = `
<div
  class="wp-components-flex css-1syc9i3"
  data-g2-c16t="true"
  data-g2-component="Flex"
>
  <div
    class="wp-components-flex-item css-19kxsx5"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  />
  <div
    class="css-j1yu9m"
  />
  <div />
  <div
    class="wp-components-flex-item wp-components-flex-block css-zkdzda"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  />
</div>
`;

exports[`props should render align 1`] = `
<div
  class="wp-components-flex css-1806uq"
  data-g2-c16t="true"
  data-g2-component="Flex"
>
  <div
    class="wp-components-flex-item css-19kxsx5"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  />
  <div
    class="wp-components-flex-item wp-components-flex-block css-zkdzda"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex css-1syc9i3"
  data-g2-c16t="true"
  data-g2-component="Flex"
>
  <div
    class="wp-components-flex-item css-19kxsx5"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  />
  <div
    class="wp-components-flex-item wp-components-flex-block css-zkdzda"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  />
</div>
`;

exports[`props should render justify 1`] = `
<div
  class="wp-components-flex css-eftzjx"
  data-g2-c16t="true"
  data-g2-component="Flex"
>
  <div
    class="wp-components-flex-item css-19kxsx5"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  />
  <div
    class="wp-components-flex-item wp-components-flex-block css-zkdzda"
    data-g2-c16t="true"
    data-g2-component="FlexBlock"
  />
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-flex css-1syc9i3"
  data-g2-c16t="true"
  data-g2-component="Flex"
  spacing="5"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;
